--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
 
+    <!--<uses-feature android:name="android.hardware.camera" />-->
+
     <uses-feature
         android:name="android.hardware.camera2"
         android:required="false" />
