--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,10 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
     implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation ('com.squareup.retrofit2:retrofit:2.1.0'){
+        exclude module: 'okhttp'
+    }
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.3.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.3.1'
 }
